--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
+        <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/72224389?v=4">
     </head>
     <body>
+        <div class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="/sites/projects.html">Projects</a></li>
+                <li><a href="/sites/about.html">About</a></li>
+            </ul>
+        </div>
         <div class="main">
             <header class="title">Evolinox</header>
         </div>
