--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Evolinox</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="/style/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
         <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
         <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/72224389?v=4">
@@ -25,8 +25,5 @@
                 <a href="/sites/about.html">About</a>
             </nav>
         </header>
-        <div class="main">
-            <header class="title">Evolinox</header>
-        </div>
     </body>
 </html>
