--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="#" class="logo">
+            <a href="/index.html" class="logo">
                 <img src="https://avatars.githubusercontent.com/u/72224389?v=4" alt="My Avatar" width="50" height="50">
             </a>
             <input type="checkbox" id="navbar-checkbox">
@@ -20,7 +20,7 @@
                 <i class="bx bx-x" id="close-nav"></i>
             </label>
             <nav class="navbar">
-                <a href="#">Home</a>
+                <a href="/index.html">Home</a>
                 <a href="/sites/projects.html">Projects</a>
                 <a href="/sites/about.html">About</a>
             </nav>
