--- a/sites/about.html
+++ b/sites/about.html
@@ -25,5 +25,9 @@
                 <a href="/sites/about.html">About</a>
             </nav>
         </header>
+        <div class="image-info">
+            <a href="https://www.flickr.com/photos/198719257@N07/53114203313/in/datetaken-public/">Der Seeposten</a>
+            <p>Elbkanal, Brokdorf</p>
+        </div>
     </body>
 </html>
