--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
                 <a href="/sites/about.html">About</a>
             </nav>
         </header>
+        <div class="clock">
+            <h1 id="current-time"></h1>
+            <h2>Halki Suomenlahden ja siit etelään</h2>
+        </div>
         <div class="image-info">
             <a href="https://www.flickr.com/photos/198719257@N07/53114203313/in/datetaken-public/">Der Seeposten</a>
             <p>Elbkanal, Brokdorf</p>
         </div>
+        <script type="text/javascript" src="/script/main.js"></script>
     </body>
 </html>
