Added project cards

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Evolinox</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/style/style.css">
+        <link rel="stylesheet" href="style/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
         <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
         <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/72224389?v=4">
@@ -29,10 +29,37 @@
             <h1 id="current-time"></h1>
             <h2>Halki Suomenlahden ja siit etelään</h2>
         </div>
+        <a href="/sites/projects.html" class="preview-header">View all...</a>
+        <div class="projects-preview">
+            <div class="project-card">
+                <img src="">
+                <div class="project-card-content">
+                    <h3>Programming_1</h3>
+                    <p>DHBW Applied Computer Science Repository.</p>
+                    <a href="https://github.com/Evolinox/DHBW_Programming_1" class="read-more-button">Repository</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="">
+                <div class="project-card-content">
+                    <h3>SpookBot</h3>
+                    <p>Discord Bot built with JDA 5, written in Java for Windows.</p>
+                    <a href="https://github.com/Evolinox/SpookBot" class="read-more-button">Repository</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="">
+                <div class="project-card-content">
+                    <h3>JS_TicTacToe</h3>
+                    <p>A Website for playing Tic Tac Toe Online, includes a local Multiplayer Mode and a Singleplayer Mode</p>
+                    <a href="https://github.com/Evolinox/JS_TicTacToe" class="read-more-button">Repository</a>
+                </div>
+            </div>
+        </div>
         <div class="image-info">
             <a href="https://www.flickr.com/photos/198719257@N07/53114203313/in/datetaken-public/">Der Seeposten</a>
             <p>Elbkanal, Brokdorf</p>
         </div>
-        <script type="text/javascript" src="/script/main.js"></script>
+        <script type="text/javascript" src="script/main.js"></script>
     </body>
 </html>
