--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Evolinox</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="style/style.css">
+        <link rel="stylesheet" href="/style/style.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
         <link rel='stylesheet' href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'>
         <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/72224389?v=4">
@@ -60,6 +60,6 @@
             <a href="https://www.flickr.com/photos/198719257@N07/53114203313/in/datetaken-public/">Der Seeposten</a>
             <p>Elbkanal, Brokdorf</p>
         </div>
-        <script type="text/javascript" src="script/main.js"></script>
+        <script type="text/javascript" src="/script/main.js"></script>
     </body>
 </html>
