--- a/sites/projects.html
+++ b/sites/projects.html
@@ -22,6 +22,7 @@
             <nav class="navbar">
                 <a href="/index.html">Home</a>
                 <a href="/sites/projects.html">Projects</a>
+                <a href="/sites/gallerie.html">Pictures</a>
                 <a href="/sites/about.html">About</a>
             </nav>
         </header>
