--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <div class="clock">
             <h1 id="current-time"></h1>
-            <h2>Halki Suomenlahden ja siit etelään</h2>
+            <h2>Ui Juma</h2>
         </div>
         <a href="/sites/projects.html" class="preview-header">View all...</a>
         <div class="projects-preview">
