--- a/sites/about.html
+++ b/sites/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Evolinox - About</title>
+        <title>Evolinox - Projects</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/style/style.css">
@@ -22,6 +22,7 @@
             <nav class="navbar">
                 <a href="/index.html">Home</a>
                 <a href="/sites/projects.html">Projects</a>
+                <a href="/sites/gallerie.html">Pictures</a>
                 <a href="/sites/about.html">About</a>
             </nav>
         </header>
