--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </header>
         <div class="clock">
             <h1 id="current-time"></h1>
-            <h2>Ui Juma</h2>
+            <h2>Hej!</h2>
         </div>
         <a href="/sites/projects.html" class="preview-header">View all...</a>
         <div class="projects-preview">
@@ -57,10 +57,10 @@
                 </div>
             </div>
         </div>
-        <div class="image-info">
+        <footer class="image-info">
             <a href="https://www.flickr.com/photos/198719257@N07/53114203313/in/datetaken-public/">Der Seeposten</a>
             <p>Elbkanal, Brokdorf</p>
-        </div>
+        </footer>
         <script type="text/javascript" src="script/main.js"></script>
     </body>
 </html>
